# crates-pro

./: .env  .gitattributes  .gitignore  BUCK  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deploy-analysis-tool-worker.sh  deploy-crates-pro.sh  deploy-sensleak-worker.sh  import.config  import.config.tmp  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: base.yml
analysis/: BUCK  Cargo.toml
analysis/sensleak_worker/: main.rs
analysis/src/: db.rs  kafka_handler.rs  lib.rs  utils.rs
analysis/tools/: tools.json
backend/: Cargo.toml
backend/src/: quary_server.rs
backend/tests/: integration_test.rs
crates_pro/: BUCK  Cargo.toml
crates_pro/src/: core_controller.rs  main.rs
crates_sync/: BUCK  Cargo.toml
crates_sync/entity/: Cargo.toml
crates_sync/entity/src/: db_enums.rs  lib.rs  prelude.rs  repo_sync_status.rs
crates_sync/src/: consumer.rs  init.rs  lib.rs  query.rs  repo_sync_model.rs
cratespro/: Cargo.toml
cratespro/src/: core_controller.rs
data/: repositories.data
data_transporter/: BUCK  Cargo.toml
data_transporter/src/: data_packer.rs  data_reader.rs  db.rs  handler.rs  lib.rs  redis_store.rs  route.rs  transporter.rs
database/: Cargo.toml  README.md  import.conf
database/entity/: Cargo.toml
database/entity/src/: contributor_location.rs  crate_downloads.rs  crate_owners.rs  crate_users.rs  crates.rs  crates_info.rs  cves.rs  dependency_cache.rs  dependent_cache.rs  github_sync_status.rs  github_user.rs  graph_info.rs  license.rs  mod.rs  prelude.rs  program_dependencies.rs  program_versions.rs  programs.rs  repository_contributor.rs  rustsec_info.rs  rustsecs.rs  sea_orm_active_enums.rs  senseleak_res.rs  userloginfo.rs  version_info.rs
database/migration/: .env  Cargo.toml  README.md
database/migration/crates.io/: README.md  import.sql  schema.sql
database/migration/crates.io/data/: crate_downloads.csv  crate_users.csv  crates.csv
database/migration/src/: lib.rs  m20250331_093145_init_crates_pro.rs  m20250401_100000_add_performance_indices.rs  m20250407_094050_alter_programs.rs  m20250409_085616_add_in_cratesio_column.rs  m20250409_090128_update_repo_id_type.rs  m20250410_055136_create_crates_table.rs  m20250418_081905_add_new_tables.rs  m20250424_092358_alter_programs.rs  m20250617_030938_add_sync_time_in_programs.rs
database/src/: crate_info.rs  lib.rs  load_plugin.rs  main.rs  quary_server.rs  tu_client.rs  tugraph_client.rs
database/src/storage/: github_handler_storage.rs  init.rs  mod.rs  program_storage.rs
database/tests/: integration_test.rs
doc/: Chinese.md  README.md  api_zh.md  database.md  how-to-use-search.md  infra.md  infra_zh.md  main_zh.md
github-handler/: Cargo.toml  Dockerfile  README.md  config.sample.json  postgresql.conf
github-handler/src/: config.rs  contributor_analysis.rs  git.rs  main.rs  utils.rs
github-handler/src/services/: github_api.rs  mod.rs  model.rs  sync_repo.rs
images/: analysis-tool-worker.Dockerfile  crates-pro.Dockerfile  sensleak-worker.Dockerfile
mega_tool/: Cargo.toml
mega_tool/src/: command.rs  crate_to_repo.rs  handle_repo.rs  incremental_update.rs  main.rs  util.rs
mega_tool/src/kafka/: mod.rs  producer.rs
mega_tool/storage/: Cargo.toml
mega_tool/storage/entity/: Cargo.toml
mega_tool/storage/entity/src/: db_enums.rs  prelude.rs
model/: BUCK  Cargo.toml
model/src/: crate_info.rs  general_model.rs  github.rs  lib.rs  plugin_model.rs  repo_sync_model.rs  tugraph_model.rs
repo_import/: BUCK  Cargo.toml
repo_import/src/: cli.rs  consumer.rs  crate_info.rs  db.rs  dep.rs  git.rs  info.rs  kafka_handler.rs  lib.rs  main.rs  metadata_info.rs  utils.rs  version_info.rs
router/: Cargo.toml
router/src/: lib.rs  quary_server.rs
router/tests/: integration_test.rs
search/: BUCK  Cargo.toml
search/src/: ai.rs  crates_search.rs  embedding.rs  lib.rs  search.rs  search_prepare.rs
sql/cratespro/: pg_20240424__init.sql
sql/sync_tool/: pg_20240424__init.sql
src/: cli.rs  core_controller.rs  main.rs
sync_tool/: .env  Cargo.toml  Dockerfile  sage_kind TEXT NOT NULL,
sync_tool/kafka_model/: Cargo.toml
sync_tool/kafka_model/src/: message_model.rs
sync_tool/src/: command.rs  crate_to_repo.rs  handle_repo.rs  incremental_update.rs  lib.rs  main.rs  sync_crate_to_repo.rs
sync_tool/src/github_sync/: mod.rs  model.rs
sync_tool/src/kafka/: producer.rs
sync_tool/storage/: Cargo.toml
sync_tool/storage/entity/: Cargo.toml
sync_tool/storage/entity/src/: db_enums.rs  lib.rs  repo_sync_status.rs
tests/: integration_test.rs
tubackend/: Cargo.toml
tubackend/src/: lib.rs  tugraph_client.rs
tudriver/: BUCK  Cargo.toml
tudriver/src/: lib.rs  tugraph_client.rs
tuplugins/: BUCK
tuplugins/plugin1/: BUCK  Cargo.toml
tuplugins/plugin1/src/: lib.rs
tuplugins/plugin2/: BUCK  Cargo.toml
tuplugins/plugin2/src/: lib.rs
