

[workspace]
members = [
  "cratespro",
  "repo_import",       # extract repo and import data into tugraph
  "model",             # internal info struct,such as `crate info` `library info` `app info`
  "tudriver",          # tugraph client, deal with the quary from router
  "tuplugins/plugin1",
  "tuplugins/plugin2", # tugraph plugins, deal with concret logics
  "data_transporter",
  "analysis",
  "mega_tool",
]

default-members = ["cratespro", "mega_tool"]

resolver = "2" # use resolver of version 2


[workspace.dependencies]
model = { path = "model" }
tudriver = { path = "tudriver" }
repo_import = { path = "repo_import"}
data_transporter = { path = "data_transporter" }
analysis = { path = "analysis"}

serde = "1.0.197"
chrono = "0.4.37"
sea-orm = "1.0.0"
axum = "0.7"
base64 = "0.22"
hyper = "1.2"
neo4rs = "0.8.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tower = "0.4"
tugraph = "0.1.4"
crates_sync = { path = "crates_sync" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
log = "0.4.21"
pretty_env_logger = "0.5"
structopt = { version = "0.3", default-features = false }
rdkafka = "0.36.2"
futures = "0.3"
