[workspace]
members = [
  "crates_pro",
  "repo_import",       # extract repo and import data into tugraph
  "model",             # internal info struct,such as `crate info` `library info` `app info`
  "tudriver",          # tugraph client, deal with the quary from router
  "tuplugins/plugin1",
  "tuplugins/plugin2", # tugraph plugins, deal with concret logics
  "data_transporter",
  "analysis",
  "sync_tool",
  "search",
]

default-members = ["crates_pro", "sync_tool"]

resolver = "2" # use resolver of version 2


[workspace.dependencies]
model = { path = "model" }
tudriver = { path = "tudriver" }
repo_import = { path = "repo_import" }
data_transporter = { path = "data_transporter" }
analysis = { path = "analysis" }
crates_sync = { path = "crates_sync" }

serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
hyper = "1.5.2"
neo4rs = "0.8.0"
chrono = "0.4"
tokio = "1.43"
sea-orm = "1.1"
tugraph = "0.1.4"
tokio-postgres = "0.7"
tower = "0.5.2"
reqwest = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15.7"
log = "0.4"
pretty_env_logger = "0.5"
structopt = "0.3"
rdkafka = "0.37"
futures = "0.3"
clap = "4.5"
flate2 = "1.0"
tempfile = "3.15"
uuid = "1.12"
git2 = "0.20"
url = "2.5"
walkdir = "2.5"
semver = "1.0"
dotenv = "0.15"
