[workspace]
members = [
  "analysis",
  "crates_pro",
  "data_transporter",
  "model",             # internal info struct,such as `crate info` `library info` `app info`
  "repo_import",       # extract repo and import data into tugraph
  "search",
  "sync_tool",
  "tudriver",          # tugraph client, deal with the quary from router
  "tuplugins/plugin1",
  "tuplugins/plugin2", # tugraph plugins, deal with concret logics  
]

resolver = "2" # use resolver of version 2

[workspace.dependencies]
# internal (项目内部依赖)
analysis = { path = "analysis" }
data_transporter = { path = "data_transporter" }
model = { path = "model" }
repo_import = { path = "repo_import" }
search = { path = "search" }
sync_tool = { path = "sync_tool" }
tudriver = { path = "tudriver" }

# third-party (所有第三方依赖, 按字母表排序, 均保留1个小数点)
actix-multipart = "0.7"
actix-web = "4.9"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bincode = "1.3"
cargo_metadata = "0.18"    # !
chrono = "0.4"
clap = "4.5"
csv = "1.3"
dotenvy = "0.15"
flate2 = "1.0"
futures = "0.3"
futures-util = "0.3"
git2 = "0.20"
hyper = "1.5"
lazy_static = "1.5"
log = "0.4"
neo4rs = "0.8"
once_cell = "1.20"
pgvector = "0.4"
pretty_env_logger = "0.5"
rayon = "1.10"
rdkafka = "0.37"
regex = "1.11"
reqwest = "0.12"
sanitize-filename = "0.6"
sea-orm = "1.1"
semver = "1.0"
serde = "1.0"
serde_json = "1.0"
sqlx = "0.8"
ssh2 = "0.9"
structopt = "0.3"
tar = "0.4"
tempfile = "3.15"
thiserror = "2.0"
tokio = "1.43"
tokio-postgres = "0.7"
toml = "0.8"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tugraph = "0.1.4"
url = "2.5"
uuid = "1.12"
walkdir = "2.5"
zip = "2.2"
