[package]
name = "analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
data_transporter = { workspace = true }
model = { workspace = true }

# third-party
dotenvy = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-postgres = { workspace = true, features = ["with-chrono-0_4"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
