[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crates_sync = { path = "../crates_sync" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
model = { workspace = true }
