[package]
name = "crates_pro"
version = "0.1.0"
edition = "2021"
default-run = "crates_pro"

[[bin]]
name = "crates_pro"
path = "src/main.rs"

[[bin]]
name = "analyze"
path = "src/bin/bin_analyze.rs"

[[bin]]
name = "data_transport"
path = "src/bin/bin_data_transport.rs"

[[bin]]
name = "repo_import"
path = "src/bin/bin_repo_import.rs"

[[bin]]
name = "benchmark_controller"
path = "src/bin/benchmark_controller.rs"

[[bin]]
name = "senseleak_controller"
path = "src/bin/senseleak_controller.rs"

[dependencies]
analysis = { workspace = true }
data_transporter = { workspace = true }
model = { workspace = true }
tudriver = { workspace = true }
repo_import = { workspace = true }

# third-party (第三方依赖, 不写具体版本号, 具体版本只在根目录 Cargo.toml 中出现)
dotenvy = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
neo4rs = { workspace = true }
rdkafka = { workspace = true, features = ["cmake-build"] }
serde_json = { workspace = true }
structopt = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
serial_test = "0.5"
