[package]
name = "crates_pro"
version = "0.1.0"
edition = "2021"
default-run = "crates_pro"

[[bin]]
name = "crates_pro"
path = "src/main.rs"

[dependencies]
analysis = { workspace = true }
data_transporter = { workspace = true }
model = { workspace = true }
tudriver = { workspace = true }
repo_import = { workspace = true }

dotenvy = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
neo4rs = { workspace = true }
rdkafka = { workspace = true, features = ["cmake-build"] }
serde_json = { workspace = true }
structopt = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
serial_test = "0.5"
