[package]
name = "data_transporter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde_json = { workspace = true }
serde = { workspace = true }
tudriver = { path = "../tudriver" }
model = { path = "../model" }
tracing = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
actix-multipart = "0.7"
futures-util = "0.3"
sanitize-filename = "0.5"
uuid = { version = "1.8.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
async-trait = "0.1"

[dev-dependencies]
actix-rt = "2.10"
