[package]
name = "data_transporter"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { workspace = true }
repo_import = { workspace = true }
search = { workspace = true }
tudriver = { workspace = true }

# third-party (第三方依赖, 不写具体版本号, 具体版本只在根目录 Cargo.toml 中出现)
actix-multipart = { workspace = true }
actix-web = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
futures-util = { workspace = true }
redis = { workspace = true }
sanitize-filename = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-postgres = { workspace = true, features = ["with-chrono-0_4"] }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["actix_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["actix-web"] }
uuid = { workspace = true, features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
zip = { workspace = true }
