[package]
name = "database"
version = "0.1.0"
edition = "2021"


[lib]
name = "database"
path = "src/lib.rs"


[dependencies]
entity = { workspace = true }
model = { workspace = true }

tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-postgres"] }
chrono = { workspace = true }
futures = { workspace = true }
