[package]
name = "repo_import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.19.0"
toml = "0.8"
crates_sync = { path = "../crates_sync" }
rayon = "1.5"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.0", features = ["full"] }
model = { workspace = true }
cargo_metadata = "0.18"
uuid = { version = "1.8.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
csv = "1.1.0"
serde_json = { workspace = true }
serde = { workspace = true }
url = "2.2.2"
dotenvy = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
walkdir = "2.3"
lazy_static = "1.4.0"
once_cell = "1.8.0"
structopt = { workspace = true }
tempfile = "3.10.1"
semver = "1.0"
