[package]
name = "repo_import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { workspace = true }

# third-party (第三方依赖, 不写具体版本号, 具体版本只在根目录 Cargo.toml 中出现)
bincode = { workspace = true }
cargo_metadata = { workspace = true }
csv = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
git2 = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
pretty_env_logger = { workspace = true }
rayon = { workspace = true }
rdkafka = { workspace = true, features = ["cmake-build"] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres"] }
ssh2 = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
walkdir = { workspace = true }

[dev-dependencies]
# 开发依赖可以不写在根目录 Cargo.toml 中
mockall = "0.13"
