[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio-postgres = { workspace = true }
dotenv = { workspace = true }
pgvector = { version = "0.4", features = ["postgres"] }
semver = { workspace = true }
