[package]
name = "sync_tool"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "storage" }
entity = { path = "storage/entity" }
kafka_model = { path = "kafka_model" }

rdkafka = { workspace = true, features = ["cmake-build"] }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
anyhow = { workspace = true }
serde = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
clap = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
serde_json = { workspace = true }
git2 = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }
regex = "1.11"
tar = "0.4.41"

[[bin]]
name = "sync_tool"   # 设置编译后的二进制文件名称
path = "src/main.rs" # 可选，默认情况下，Cargo 会查找 src/main.rs 文件
