[package]
edition = "2021"
name = "tudriver"
version = "0.1.0"

[dependencies]
# third-party (第三方依赖, 不写具体版本号, 具体版本只在根目录 Cargo.toml 中出现)
base64 = { workspace = true }
neo4rs = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
