[package]
name = "plugin2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tugraph = "0.1.4"
tugraph-plugin-util = "0.1.2"
serde = { workspace = true }
serde_json = { workspace = true }
model = { path = "../../model/" }


[lib]
crate-type = ["cdylib"]
